Ensure content does not solely consist of whitespace

--- a/src/app/home/home.component.scss
+++ b/src/app/home/home.component.scss
@@ -5,11 +5,10 @@
 .sidebar-links-container {
   border: 0px;
   height: 100%;
+  margin: 16px;
 }
 
 .timeline {
   min-width: 470px;
   max-width: 60%;
 }
-
-
